Tue Dec 21 06:25:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rexml/test_contrib.rb (ContribTester#test_pos): should not
	  use fixed path name for tests.  [ruby-dev:42827]

	* test/rexml/test_sax.rb (SAX2Tester#test_socket): should not use
	  fixed port for tests.  [ruby-dev:42828]

Tue Dec 21 01:41:42 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* io.c : add an extra byte to buffer for the specification of read
	  in Windows. see [ruby-core:33460] and r29980. and, we have to
	  discuss how to do this one byte.

Wed Dec 15 04:02:00 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/ossl_x509ext.c (ossl_x509extfactory_set_config):
	  fix compile error when !HAVE_X509V3_SET_NCONF. Thanks
	  Chikanaga-san. [ruby-dev:42761] [Ruby 1.9-Bug#4158]

Sat Dec 11 05:48:28 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: infinite loop on method_missing at loading.
	  [ruby-dev:42716] [Ruby 1.9-Bug#4129]

	* ext/tk/lib/multi-tk.rb: when no eventloop is running, ruby freezes at exit.

Tue Dec  7 22:37:15 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* io.c (io_read): duplicate string if shared. [ruby-dev:42719]

Tue Dec  7 21:59:37 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/light/node.rb: remove circular require.

Tue Dec  7 18:56:52 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/lib/kconv.rb (String#kconv): fix typo and update rdoc.
	  patched by Kouhei Yanagita [ruby-dev:42696]

Tue Dec  7 00:27:14 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* win32/win32.c (rb_w32_read): fixed more for readline,
	  and so on. [ruby-core:33511]

Mon Dec  6 18:56:42 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_string.rb (TestString#test_scan): add a test for
	  [ruby-core:33338] #4087.

Thu Dec 23 19:17:14 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/net/imap/cacert.pem: updated because it has been expired.

	* test/net/imap/server.crt: signed again because CA cert was expired.
